[package]
name = "tfer-windows-service"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
tray-item = "0.10.0"
local-ip-address = "0.6.1"
gethostname = "0.5.0"
bincode = "1.3.3"
mdns-sd = "0.11.1"
rfd = "0.14.1"
serde = { version = "1", features = ["derive"] }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
[build-dependencies]
windres = "*"
